--- a/config/en-ww.properties
+++ b/config/en-ww.properties
@@ -8,6 +8,7 @@ UI.MESSAGE.BMPENCODE.SEED=Sorting Seed
 UI.RANDOM=Random
 UI.MESSAGE.BMPDECODE=Decode from BMP Files
 UI.PICTURE.TITLE=Embed One Picture into Another
+UI.SIGNITURE.TITLE=Embed Digital Signiture
 UI.SETTING.TITLE=Setting
 UI.SETTING.OPTION=Settings and Options
 UI.SETTING.OPTION.LANGUAGE=Language
