--- a/config/zh-cn.properties
+++ b/config/zh-cn.properties
@@ -8,6 +8,7 @@ UI.MESSAGE.BMPENCODE.SEED=\u6392\u5e8f\u79cd\u5b50
 UI.RANDOM=\u968f\u673a
 UI.MESSAGE.BMPDECODE=\u89e3\u6790BMP\u56fe\u50cf
 UI.PICTURE.TITLE=\u56fe\u7247\u5d4c\u5165\u56fe\u7247
+UI.SIGNITURE.TITLE=\u6570\u5b57\u6c34\u5370
 UI.SETTING.TITLE=\u8bbe\u7f6e
 UI.SETTING.OPTION=\u8bbe\u7f6e\u4e0e\u9009\u9879
 UI.SETTING.OPTION.LANGUAGE=\u8bed\u8a00
