<Wong Watermark UI>

--- a/config/en-ww.properties
+++ b/config/en-ww.properties
@@ -8,7 +8,32 @@ UI.MESSAGE.BMPENCODE.SEED=Sorting Seed
 UI.RANDOM=Random
 UI.MESSAGE.BMPDECODE=Decode from BMP Files
 UI.PICTURE.TITLE=Embed One Picture into Another
-UI.SIGNITURE.TITLE=Embed Digital Signiture
+UI.SIGNATURE.TITLE=Embed Digital Signiture
+UI.SIGNATURE.BMPENCODE.WATERMARK=Watermark
+UI.SIGNATURE.BMPENCODE.PICTURE=Picture
+UI.SIGNATURE.BMPENCODE.HASH.FIRST=SHA1
+UI.SIGNATURE.BMPENCODE.HASH.SECOND=MD5
+UI.SIGNATURE.BMPENCODE.ENCRPT.FIRST= AES
+UI.SIGNATURE.BMPENCODE.ENCRPT.SECOND=RSA
+UI.SIGNATURE.BMPENCODE.SCAN=Scan
+UI.SIGNATURE.BMPENCODE.HASH.LABLE=Hash
+UI.SIGNATURE.BMPENCODE.ENCRYPTION.LABLE=Encyption
+UI.SIGNATURE.BMPENCODE.PASSWORD.LABLE=Password
+UI.SIGNATURE.BMPENCODE.PASSWORD.BUTTON=Save
+UI.SIGNATURE.BMPENCODE.SAVEFILE.LABLE=Directory
+UI.SIGNATURE.BMPENCODE=Embed Watermark
+UI.SIGNATURE.BMPDECODE=Extract Watermark
+UI.SIGNATURE.BMPDECODE.WATERMARK=Embeded
+UI.SIGNATURE.BMPDECODE.SCAN=Scan
+UI.SIGNATURE.BMPDECODE.SAVEFILE.LABEL=Directory
+UI.SIGNATURE.BMPDECODE.HASH.FIRST=SHA1
+UI.SIGNATURE.BMPDECODE.HASH.SECOND=MD5
+UI.SIGNATURE.BMPDECODE.ENCRPT.FIRST= AES
+UI.SIGNATURE.BMPDECODE.ENCRPT.SECOND=RSA
+UI.SIGNATURE.BMPDECODE.HASH.LABLE=Hash
+UI.SIGNATURE.BMPDECODE.ENCRYPTION.LABLE=Encyption
+UI.SIGNATURE.BMPDECODE.PASSWORD.LABLE=Password
+UI.SIGNATURE.BMPDECODE.RSA=Certificate
 UI.SETTING.TITLE=Setting
 UI.SETTING.OPTION=Settings and Options
 UI.SETTING.OPTION.LANGUAGE=Language
