--- a/config/en-ww.properties
+++ b/config/en-ww.properties
@@ -34,8 +34,11 @@ UI.SIGNATURE.BMPDECODE.HASH.LABLE=Hash
 UI.SIGNATURE.BMPDECODE.ENCRYPTION.LABLE=Encyption
 UI.SIGNATURE.BMPDECODE.PASSWORD.LABLE=Password
 UI.SIGNATURE.BMPDECODE.RSA=Certificate
+UI.SIGNATURE.ACTIVATE=EMBED
+UI.SIGNATURE.SAVE=SAVE
 UI.SETTING.TITLE=Setting
 UI.SETTING.OPTION=Settings and Options
 UI.SETTING.OPTION.LANGUAGE=Language
 UI.SETTING.ABOUT=About
 UI.FONT.FAMILY=Arial
+UI.PICTUREPANEL.SHOWIMAGE=Full Size
