--- a/config/en-ww.properties
+++ b/config/en-ww.properties
@@ -5,23 +5,39 @@ UI.MESSAGE.BMPENCODE.INPUT.DEFAULT=Default Picture
 UI.MESSAGE.BMPENCODE.INPUT.CUSTOM=Custom Picture
 UI.MESSAGE.BMPENCODE.INPUT.RECENT=Recently Used Picture
 UI.MESSAGE.BMPENCODE.SEED=Sorting Seed
+UI.MESSAGEDIALOG.TITLE=Warning
 UI.RANDOM=Random
 UI.MESSAGE.BMPDECODE=Decode from BMP Files
 UI.PICTURE.TITLE=Embed One Picture into Another
 UI.SIGNATURE.TITLE=Embed Digital Signiture
 UI.SIGNATURE.BMPENCODE.WATERMARK=Watermark
+UI.SIGNATURE.BMPENCODE.WATERMARK.WARNING=Please select a picture as your watermark!
+UI.SIGNATURE.BMPENCODE.WATERMARK.SUCCESS=Watermark loaded successfully
 UI.SIGNATURE.BMPENCODE.PICTURE=Picture
+UI.SIGNATURE.BMPENCODE.PICTURE.WARNING=Please select a picture as your picture!
+UI.SIGNATURE.BMPENCODE.PICTURE.SUCCESS=Picture loaded successfully
 UI.SIGNATURE.BMPENCODE.HASH.FIRST=SHA1
 UI.SIGNATURE.BMPENCODE.HASH.SECOND=MD5
-UI.SIGNATURE.BMPENCODE.ENCRPT.FIRST= AES
+UI.SIGNATURE.BMPENCODE.ENCRPT.FIRST=AES
 UI.SIGNATURE.BMPENCODE.ENCRPT.SECOND=RSA
+UI.SIGNATURE.BMPENCODE.ENCRPT.THIRD=DES
 UI.SIGNATURE.BMPENCODE.SCAN=Scan
 UI.SIGNATURE.BMPENCODE.HASH.LABLE=Hash
 UI.SIGNATURE.BMPENCODE.ENCRYPTION.LABLE=Encyption
 UI.SIGNATURE.BMPENCODE.PASSWORD.LABLE=Password
 UI.SIGNATURE.BMPENCODE.PASSWORD.BUTTON=Save
+UI.SIGNATURE.BMPENCODE.PASSWORD.WARNING=Please enter your password to generate a key!
+UI.SIGNATURE.BMPENCODE.PASSWORD.TIP=Private key saved successfully
 UI.SIGNATURE.BMPENCODE.SAVEFILE.LABLE=Directory
 UI.SIGNATURE.BMPENCODE=Embed Watermark
+UI,SIGNATURE.BMPENCODE.PROGRESS.CALHASH=Hash value generated successfully
+UI,SIGNATURE.BMPENCODE.PROGRESS.WMBINARY=Watermark binaryzed successfully
+UI,SIGNATURE.BMPENCODE.PROGRESS.WALLGENERATE=Imagewall generated successfully
+UI,SIGNATURE.BMPENCODE.PROGRESS.HASHINSERT=Hashed value has been inserted
+UI,SIGNATURE.BMPENCODE.PROGRESS.ENCRYINSERT=Encrypted value has been inserted
+UI,SIGNATURE.BMPENCODE.PROGRESS.MATRIXOUTPUT=Imagewall has generated a matrix
+UI,SIGNATURE.BMPENCODE.PROGRESS.ENCODED=Watermark has been encoded into the picture
+UI,SIGNATURE.BMPENCODE.PROGRESS.SAVED=Embeded picture has been saved
 UI.SIGNATURE.BMPDECODE=Extract Watermark
 UI.SIGNATURE.BMPDECODE.WATERMARK=Embeded
 UI.SIGNATURE.BMPDECODE.SCAN=Scan
@@ -30,6 +46,7 @@ UI.SIGNATURE.BMPDECODE.HASH.FIRST=SHA1
 UI.SIGNATURE.BMPDECODE.HASH.SECOND=MD5
 UI.SIGNATURE.BMPDECODE.ENCRPT.FIRST= AES
 UI.SIGNATURE.BMPDECODE.ENCRPT.SECOND=RSA
+UI.SIGNATURE.BMPDECODE.ENCRPT.THIRD=DES
 UI.SIGNATURE.BMPDECODE.HASH.LABLE=Hash
 UI.SIGNATURE.BMPDECODE.ENCRYPTION.LABLE=Encyption
 UI.SIGNATURE.BMPDECODE.PASSWORD.LABLE=Password
@@ -42,3 +59,4 @@ UI.SETTING.OPTION.LANGUAGE=Language
 UI.SETTING.ABOUT=About
 UI.FONT.FAMILY=Arial
 UI.PICTUREPANEL.SHOWIMAGE=Full Size
+UI.PICTUREPANEL.SHOWHIST=Show Hist
