--- a/config/en-ww.properties
+++ b/config/en-ww.properties
@@ -24,7 +24,8 @@ UI.SIGNATURE.BMPENCODE.ENCRPT.THIRD=DES
 UI.SIGNATURE.BMPENCODE.SCAN=Scan
 UI.SIGNATURE.BMPENCODE.HASH.LABLE=Hash
 UI.SIGNATURE.BMPENCODE.ENCRYPTION.LABLE=Encyption
-UI.SIGNATURE.BMPENCODE.PASSWORD.LABLE=Password
+UI.SIGNATURE.BMPENCODE.PASSWORD.LABLE=Password1
+UI.SIGNATURE.BMPENCODE.PASSWORD2.LABLE=Password2
 UI.SIGNATURE.BMPENCODE.PASSWORD.BUTTON=Save
 UI.SIGNATURE.BMPENCODE.PASSWORD.WARNING=Please enter your password to generate a key!
 UI.SIGNATURE.BMPENCODE.PASSWORD.TIP=Private key saved successfully
@@ -49,9 +50,12 @@ UI.SIGNATURE.BMPDECODE.ENCRPT.SECOND=RSA
 UI.SIGNATURE.BMPDECODE.ENCRPT.THIRD=DES
 UI.SIGNATURE.BMPDECODE.HASH.LABLE=Hash
 UI.SIGNATURE.BMPDECODE.ENCRYPTION.LABLE=Encyption
-UI.SIGNATURE.BMPDECODE.PASSWORD.LABLE=Password
+UI.SIGNATURE.BMPDECODE.PASSWORD.LABLE=Password1
+UI.SIGNATURE.BMPDECODE.PASSWORD2.LABLE=Password2
 UI.SIGNATURE.BMPDECODE.RSA=Certificate
+UI.SIGNATURE.BMPDECODE.COMPARE=Compare
 UI.SIGNATURE.ACTIVATE=EMBED
+UI.SIGNATURE.EXTRACT=EXTRACT
 UI.SIGNATURE.SAVE=SAVE
 UI.SETTING.TITLE=Setting
 UI.SETTING.OPTION=Settings and Options
