--- a/config/zh-cn.properties
+++ b/config/zh-cn.properties
@@ -5,13 +5,62 @@ UI.MESSAGE.BMPENCODE.INPUT.DEFAULT=\u9ed8\u8ba4\u56fe\u7247
 UI.MESSAGE.BMPENCODE.INPUT.CUSTOM=\u81ea\u9009\u56fe\u7247
 UI.MESSAGE.BMPENCODE.INPUT.RECENT=\u4e0a\u4e00\u6b21\u4f7f\u7528\u56fe\u7247
 UI.MESSAGE.BMPENCODE.SEED=\u6392\u5e8f\u79cd\u5b50
+UI.MESSAGEDIALOG.TITLE=\u63d0\u793a
 UI.RANDOM=\u968f\u673a
 UI.MESSAGE.BMPDECODE=\u89e3\u6790BMP\u56fe\u50cf
 UI.PICTURE.TITLE=\u56fe\u7247\u5d4c\u5165\u56fe\u7247
-UI.SIGNITURE.TITLE=\u6570\u5b57\u6c34\u5370
+UI.SIGNATURE.TITLE=\u5d4c\u5165\u6570\u5b57\u6c34\u5370
+UI.SIGNATURE.BMPENCODE.WATERMARK=\u6c34\u5370\u56fe\u7247
+UI.SIGNATURE.BMPENCODE.WATERMARK.WARNING=\u8bf7\u9009\u62e9\u6c34\u5370\u56fe\u7247
+UI.SIGNATURE.BMPENCODE.WATERMARK.SUCCESS=\u6c34\u5370\u56fe\u7247\u52a0\u8f7d\u6210\u529f
+UI.SIGNATURE.BMPENCODE.PICTURE=\u8f7d\u4f53\u56fe\u7247
+UI.SIGNATURE.BMPENCODE.PICTURE.WARNING=\u8bf7\u9009\u62e9\u4e00\u5f20\u8f7d\u4f53\u56fe\u7247
+UI.SIGNATURE.BMPENCODE.PICTURE.SUCCESS=\u8f7d\u4f53\u56fe\u7247\u52a0\u8f7d\u6210\u529f
+UI.SIGNATURE.BMPENCODE.HASH.FIRST=SHA1
+UI.SIGNATURE.BMPENCODE.HASH.SECOND=MD5
+UI.SIGNATURE.BMPENCODE.ENCRPT.FIRST=AES
+UI.SIGNATURE.BMPENCODE.ENCRPT.SECOND=RSA
+UI.SIGNATURE.BMPENCODE.ENCRPT.THIRD=DES
+UI.SIGNATURE.BMPENCODE.SCAN=\u6d4f\u89c8
+UI.SIGNATURE.BMPENCODE.HASH.LABLE=\u54c8\u5e0c\u7b97\u6cd5
+UI.SIGNATURE.BMPENCODE.ENCRYPTION.LABLE=\u52a0\u5bc6\u7b97\u6cd5
+UI.SIGNATURE.BMPENCODE.PASSWORD.LABLE=\u7532\u53e3\u4ee4
+UI.SIGNATURE.BMPENCODE.PASSWORD2.LABLE=\u4e59\u53e3\u4ee4
+UI.SIGNATURE.BMPENCODE.PASSWORD.BUTTON=\u4fdd\u5b58
+UI.SIGNATURE.BMPENCODE.PASSWORD.WARNING=\u8bf7\u8f93\u5165\u53e3\u4ee4\u4ee5\u751f\u6210\u5bc6\u94a5
+UI.SIGNATURE.BMPENCODE.PASSWORD.TIP=\u79c1\u94a5\u4fdd\u5b58\u6210\u529f
+UI.SIGNATURE.BMPENCODE.SAVEFILE.LABLE=\u76ee\u5f55
+UI.SIGNATURE.BMPENCODE=\u5d4c\u5165\u6c34\u5370
+UI,SIGNATURE.BMPENCODE.PROGRESS.CALHASH=\u54c8\u5e0c\u503c\u52a0\u8f7d\u6210\u529f
+UI,SIGNATURE.BMPENCODE.PROGRESS.WMBINARY=\u6c34\u5370\u4e8c\u503c\u5316\u6210\u529f
+UI,SIGNATURE.BMPENCODE.PROGRESS.WALLGENERATE=\u56fe\u50cf\u5757\u751f\u6210\u6210\u529f
+UI,SIGNATURE.BMPENCODE.PROGRESS.HASHINSERT=\u54c8\u5e0c\u503c\u5d4c\u5165\u6210\u529f
+UI,SIGNATURE.BMPENCODE.PROGRESS.ENCRYINSERT=\u52a0\u5bc6\u503c\u5d4c\u5165\u6210\u529f
+UI,SIGNATURE.BMPENCODE.PROGRESS.MATRIXOUTPUT=\u56fe\u50cf\u5757\u751f\u6210\u77e9\u9635
+UI,SIGNATURE.BMPENCODE.PROGRESS.ENCODED=\u6c34\u5370\u7f16\u7801\u5d4c\u5165\u6210\u529f
+UI,SIGNATURE.BMPENCODE.PROGRESS.SAVED=\u5d4c\u5165\u540e\u56fe\u7247\u4fdd\u5b58\u6210\u529f
+UI.SIGNATURE.BMPDECODE=\u63d0\u53d6\u6c34\u5370
+UI.SIGNATURE.BMPDECODE.WATERMARK=\u53d7\u4fdd\u62a4\u56fe\u7247
+UI.SIGNATURE.BMPDECODE.SCAN=\u6d4f\u89c8
+UI.SIGNATURE.BMPDECODE.SAVEFILE.LABEL=\u76ee\u5f55
+UI.SIGNATURE.BMPDECODE.HASH.FIRST=SHA1
+UI.SIGNATURE.BMPDECODE.HASH.SECOND=MD5
+UI.SIGNATURE.BMPDECODE.ENCRPT.FIRST= AES
+UI.SIGNATURE.BMPDECODE.ENCRPT.SECOND=RSA
+UI.SIGNATURE.BMPDECODE.ENCRPT.THIRD=DES
+UI.SIGNATURE.BMPDECODE.HASH.LABLE=\u54c8\u5e0c\u7b97\u6cd5
+UI.SIGNATURE.BMPDECODE.ENCRYPTION.LABLE=\u52a0\u5bc6\u7b97\u6cd5
+UI.SIGNATURE.BMPDECODE.PASSWORD.LABLE=\u7532\u53e3\u4ee4
+UI.SIGNATURE.BMPDECODE.PASSWORD2.LABLE=\u4e59\u53e3\u4ee4
+UI.SIGNATURE.BMPDECODE.RSA=\u8ba4\u8bc1
+UI.SIGNATURE.BMPDECODE.COMPARE=\u6bd4\u8f83
+UI.SIGNATURE.ACTIVATE=\u5d4c\u5165
+UI.SIGNATURE.EXTRACT=\u63d0\u53d6
+UI.SIGNATURE.SAVE=\u4fdd\u5b58
 UI.SETTING.TITLE=\u8bbe\u7f6e
 UI.SETTING.OPTION=\u8bbe\u7f6e\u4e0e\u9009\u9879
 UI.SETTING.OPTION.LANGUAGE=\u8bed\u8a00
 UI.SETTING.ABOUT=\u5173\u4e8e
 UI.FONT.FAMILY=\u5FAE\u8F6F\u96C5\u9ED1
-d
+UI.PICTUREPANEL.SHOWIMAGE=\u5168\u5c3a\u5bf8
+UI.PICTUREPANEL.SHOWHIST=\u663e\u793a\u76f4\u65b9\u56fe
